# mCCS

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  justfile  mccs.toml  rust-toolchain
benchmark/: config.toml
benchmark/benchmark/: allreduce.toml
benchmark/src/: main.rs
cuda-sys/cuda-driver-sys/: build.rs
cuda-sys/cuda-finder/: Cargo.toml
cuda-sys/cuda-finder/src/: lib.rs
cuda-sys/cuda-runtime-sys/: build.rs  wrapper.h
docs/: overview.md  setup.md
eval/: set_ecmp_hashing_algo.sh
eval/dynamic-config/: dynamic-patch.toml  launch-allreduce-ring-reconfig.toml  launch-gpt-1.toml  launch-gpt-2.toml  launch-ring-reconfig.toml  launch.toml  reconfig-degrade.toml  reconfig-patch.toml  reconfig.toml  setup4-trace-fair.toml
eval/environment/: change_switch_setting.sh  host_mlnx_config.sh  switch_base_setting_do_not_touch.txt  switch_enable_mccs_commands.txt
eval/microbench/: 4gpu.toml  execute.py  gen_config.py
eval/microbench/output/: allgather_16K.toml  allgather_16M.toml  allgather_1G.toml  allgather_1K.toml  allgather_1M.toml  allgather_256K.toml  allgather_256M.toml  allgather_4K.toml  allgather_4M.toml  allgather_64K.toml  allgather_64M.toml  allreduce_16K.toml  allreduce_16M.toml  allreduce_1G.toml  allreduce_1K.toml  allreduce_1M.toml  allreduce_256K.toml  allreduce_256M.toml  allreduce_4K.toml  allreduce_4M.toml  allreduce_64K.toml  allreduce_64M.toml
eval/multi-app/: collect.py  collect2.py  collect3.py  collect_multi.py  ecmp-setup1.toml  ecmp-setup2.toml  ecmp-setup3.toml  ecmp-setup4.toml  flow-setup1.toml  flow-setup2.toml  flow-setup3.toml  flow-setup4.toml  gen_config.py  gen_traffic_gen_config.py  interval.py  nccl-test.patch  profiling.toml  run_dynamic.py  setup1-trace-fair.toml  setup1-trace-profile.toml  setup1-trace-qos.toml  setup1.toml  setup2-trace-fair.toml  setup2-trace-qosv1.toml  setup2-trace-qosv2.toml  setup2-vgg.toml  setup2.toml  setup3.toml  setup4-trace-ecmp-qosv1.toml  setup4-trace-fair.toml  setup4-trace-qosv1.toml
eval/multi-app/setting1/: run_all_jobs.sh  run_nccl_job_small.sh
eval/multi-app/setting2/: collect_nccl.py  run_all_jobs.sh  run_nccl_all_jobs_multiple_times.sh  run_nccl_job_blue.sh  run_nccl_job_small.sh
eval/multi-app/setting3/: collect_nccl.py  run_all_jobs_once.sh  run_nccl_job_small.sh
eval/multi-app/setting4/: collect_nccl.py  run_all_jobs_once.sh  (+2 more)
eval/plot/: plt_show.py
eval/single-app/: 4gpu_ecmp.toml  8gpu_ecmp.toml  collect.py  collect_nccl.py  gen_config.py  one_click_run_nccl_all.sh  run_nccl.sh  run_nccl_multiple_times.sh  run_nccl_once.sh
launcher/: Cargo.toml  config.toml
launcher/benchmark/: allgather.toml
launcher/src/: main.rs
live-configs/: ring-demo.toml
microbenchs/: plot.py  result.csv
nccl-tests-mccs/: nccl-test.patch
nccl-tests-mccs/microbenchmark/: 8gpu.toml  nccl_result.csv  run_nccl_multiple_times.sh  set_ecmp_hashing_algo.sh
nccl-tests-mccs/setting1/: collect_nccl.py  run_all_jobs_once.sh  run_nccl_all_jobs_multiple_times.sh
nccl-tests-mccs/setting2/: collect_nccl.py  run_all_jobs_once.sh  run_nccl_job_small.sh
nccl-tests-mccs/setting3/: collect_nccl.py  run_nccl_all_jobs_multiple_times.sh
nccl-tests-mccs/setting4/: collect_nccl.py
nccl-tests-mccs/src/: Makefile  common.cu
nccl-traffic-gen/: Makefile  Makefile2  main.cpp
src/collectives/: Makefile  gen_rules.sh
src/collectives-sys/: Cargo.toml  build.rs  wrapper.h
src/experimental/: Cargo.toml
src/gdrcopy-sys/: Cargo.toml  build.rs  wrapper.h
src/ibverbs/: Cargo.toml  build.rs  wrapper.h
src/ibverbs/src/: ffi.rs  lib.rs  sliceindex.rs
src/ipc/: Cargo.toml
src/ipc/core/: Cargo.toml
src/ipc/core/src/: control.rs  customer.rs  lib.rs  service.rs  unix.rs
src/ipc/mccs/: Cargo.toml
src/ipc/mccs/src/: command.rs  dp.rs  handle.rs  lib.rs  reconfig.rs
src/ipc/src/: lib.rs
src/libmccs/: Cargo.toml
src/libmccs/src/: c_abi.rs  collectives.rs  communicator.rs  lib.rs  memory.rs
src/mccs/: Cargo.toml
src/mccs/src/: communicator.rs  config.rs  control.rs  engine.rs  lib.rs  main.rs  message.rs  pattern.rs  registry.rs  resources.rs
src/mccs/src/bootstrap/: mod.rs  task.rs
src/mccs/src/comm/: device.rs  mod.rs  profile.rs
src/mccs/src/cuda/: alloc.rs  mapped_ptr.rs  mod.rs  ptr.rs
src/mccs/src/daemon/: engine.rs  mod.rs
src/mccs/src/exchange/: command.rs  engine.rs  message.rs  mod.rs
src/mccs/src/proxy/: command.rs  engine.rs  init.rs  message.rs  mod.rs  op.rs  ops.rs  plan.rs  reconfig.rs  task.rs
src/mccs/src/runtime/: affinity.rs  executor.rs  manager.rs  mod.rs
src/mccs/src/transport/: buffer.rs  catalog.rs  channel.rs  connector.rs  delegator.rs  engine.rs  instr.rs  message.rs  meta.rs  mod.rs  op.rs  queue.rs  registry.rs  setup.rs  task.rs  transporter.rs
src/mccs/src/transport/hmem/: config.rs  mod.rs  ops.rs  resources.rs
src/mccs/src/transport/net/: agent.rs  buffer.rs  config.rs  mod.rs  resources.rs  transporter.rs
src/mccs/src/transport/net/provider/: mod.rs  rdma.rs
src/mccs/src/transport/rdma/: transporter.rs
src/mccs/src/transport/shm/: agent.rs  buffer.rs  config.rs  mod.rs  resources.rs  transporter.rs
src/mccs/src/utils/: duplex_chan.rs  gdr.rs  interfaces.rs  mod.rs  pool.rs  tcp.rs
src/mccs_examples/allgather_bench/: Cargo.toml
src/mccs_examples/allgather_bench/src/: main.rs
src/mccs_examples/allreduce_bench/: Cargo.toml
src/mccs_examples/allreduce_bench/src/: main.rs
src/mccs_examples/ring_config/: Cargo.toml
src/mccs_examples/ring_config/src/: main.rs
src/mccs_examples/traffic_gen/: Cargo.toml
src/mccs_examples/traffic_gen/src/: main.rs
src/qos-service/: Cargo.toml
src/rdma/: Cargo.toml
src/rdma/src/: rdmacm.rs
workloads/: reconfig_gpt.toml  setup-1_gpt_0.toml  setup-1_gpt_1.toml  setup-1_resnet_0.toml  setup-1_resnet_1.toml  setup-1_vgg.toml  setup-1_vgg_0.toml  setup-1_vgg_1.toml  setup-2_gpt.toml  setup-2_gpt_2.toml  setup-2_resnet.toml  setup-2_vgg.toml  setup-3_gpt_1.toml  setup-3_gpt_2.toml  setup-4_gpt_1.toml  setup-4_gpt_2.toml  setup-4_resnet_0.toml  setup-4_vgg.toml
(+51 files in other folders)
