[workspace]

members = [
    "src/cuda-sys/cuda-driver-sys",
    "src/cuda-sys/cuda-runtime-sys",
    "src/cuda-sys/cuda-finder",
    "src/gdrcopy-sys",
    "src/collectives-sys",
    "src/ibverbs",
    "src/experimental",
    "src/ipc",
    "src/ipc/core",
    "src/ipc/mccs",
    "src/libmccs",
    "src/mccs",
    "src/mccs_examples/cuda_hello",
    "src/mccs_examples/allgather_proto",
    "src/mccs_tests/rdma_transport",
]