[workspace]
resolver = "2"

members = [
    "src/cuda-sys/cuda-driver-sys",
    "src/cuda-sys/cuda-runtime-sys",
    "src/cuda-sys/nvml-sys",
    "src/cuda-sys/cuda-finder",
    "src/gdrcopy-sys",
    "src/collectives-sys",
    "src/ibverbs",
    "src/experimental",
    "src/ipc",
    "src/ipc/core",
    "src/ipc/mccs",
    "src/libmccs",
    "src/mccs",
    "src/mccs_examples/cuda_hello",
    "src/mccs_examples/allgather_proto",
    "src/mccs_examples/allreduce_proto",
    "src/mccs_examples/allgather_bench",
    "src/mccs_examples/allreduce_bench",
    "src/mccs_examples/ring_config",
    "src/mccs_tests/rdma_transport", 
    "src/qos-service", 
    "src/mccs_examples/traffic_gen",
    "launcher",
]
