[package]
name = "ibverbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[features]
default = ["serde"]

[dev-dependencies]
bincode = "1.3"

[build-dependencies]
bindgen = "0.69"