[package]
name = "ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipc-core = { path = "core" }
mccs = { path = "mccs", package = "ipc-mccs", optional = true }

[features]
default = []
customer = ["ipc-core/customer"]