[package]
name = "mccs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda-driver-sys = { path = "../cuda-sys/cuda-driver-sys" }
cuda-runtime-sys = { path = "../cuda-sys/cuda-runtime-sys" }
nvml-sys = { path = "../cuda-sys/nvml-sys" }
ipc = { path = "../ipc", features = ["mccs"] }
collectives-sys = { path = "../collectives-sys" }
gdrcopy-sys = { path = "../gdrcopy-sys" }
ibverbs = { path = "../ibverbs" }
qos-service = { path = "../qos-service" }

smol = { version = "2.0.0" }
socket2 = { version = "0.5.5", features = ["all"] }
anyhow = "1.0.66"
bincode = "1.3.3"
serde = "1.0.149"
toml = "0.5.9"
thiserror = "1.0.37"
uuid = { version = "1.2.2", features = ["v4"] }
structopt = "0.3.26"
nix = { version = "0.27.1", features = ["feature", "net", "socket", "signal", "fs", "mman"] }
dashmap = "5.4.0"
crossbeam = "0.8.2"
rand = "0.8.5"
static_assertions = "1.1.0"
async-trait = "0.1.64"
futures = "0.3.26"
memoffset = "0.8.0"
log = { version = "0.4.20", features = ["max_level_trace", "release_max_level_info"] }
env_logger = "0.10.0"
bitflags = "2.4.1"
once_cell = "1.18.0"
num_enum = "0.7.1"
strum = { version = "0.25", features = ["derive"] }
volatile = "0.5.1"
byteorder = "1.5.0"
atoi = "2.0.0"
bytes = "1.5.0"
itertools = "0.12.0"
chrono = "0.4.31"
fastrand = "2.0.1"
spin = "0.9.8"
better-panic = "0.3.0"
libnuma = "0.0.4"
gcollections = "1.5.0"
