[package]
name = "rdma"
version = "0.1.0"
edition = "2021"
links = "libibverbs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.68.1"
cc = "1.0.83"

[dependencies]
thiserror = "1.0.50"
log = "0.4.20"
libc = "0.2.149"
static_assertions = "1.1.0"
socket2 = "0.4.10"
memfd = "0.6.4"
nix = { version = "0.27.1" , default-features = false, features = ["socket","net"] }
#bincode = { workspace = true, optional = true }
#serde = { workspace = true, features = ["derive"], optional = true }
#mmap = { workspace = true, optional = true }
#spin = { workspace = true, optional = true }
#lazy_static = { workspace = true, optional = true }

[features]
