[package]
name = "ipc-mccs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipc-core = { path = "../core" }

serde = { version = "1.0.149", features = ["derive"] }
serde-big-array = { version = "0.4.1" }
static_assertions = "1.1.0" 

cuda-runtime-sys = { path = "../../cuda-sys/cuda-runtime-sys" }