[package]
name = "ring_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipc = { path = "../../ipc", features = ["mccs"] }

bincode = "1.3.3"
serde = "1.0.149"
byteorder = "1.5.0"
structopt = "0.3.26"
toml = "0.8.8"