[package]
name = "traffic_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda-runtime-sys = { path = "../../cuda-sys/cuda-runtime-sys" }
libmccs = { path = "../../libmccs" }
csv = "1.3.0"

structopt = "0.3.26"
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"
spin_sleep = "1.2.0"
chrono = "0.4.33"
